hphp/hack/test/typecheck/trait_private_bad.php.exp
File "trait_private_bad.php", line 24, characters 19-21:
The method foo is undefined in an object of type B (Typing[4053])
File "trait_private_bad.php", line 22, characters 7-7:
Declaration of B is here
